# metadata

./: .env.schema  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  main.py  pyproject.toml  run.py  uvicorn_starter.sh
.github/: pull_request_template.md
.github/workflows/: build-and-publish.yml  run-tests.yml  test-build-publish.yml  test_docker_compose.yml  trigger-jenkins.yml
.gitlab/merge_request_templates/: default.md
app/: api_registry.py  app_utils.py  config.py  main.py
app/graphql/: models.py  resolvers.py  schema.py
app/models/: base_models.py  models_attribute_templates.py  models_collections.py  models_items.py  sql_attribute_templates.py  sql_collections.py  sql_extended.py  sql_items.py  sql_items_collections.py  sql_storage.py
app/routers/: router_exceptions.py  router_utils.py
app/routers/v1/: api_hello_world.py
app/routers/v1/attribute_templates/: api_attribute_templates.py  crud.py
app/routers/v1/collections/: api_collections.py  crud.py  utils.py
app/routers/v1/health/: api_health.py
app/routers/v1/items/: api_items.py  crud.py  utils.py
kubernetes/: dev-deployment.yaml  staging-deployment.yaml
local_config/pgadmin/: pgadmin4.db
local_config/pgadmin/sessions/: 3a9c31c4-b483-4084-9444-fdb9b3609566  4567022b-e6a1-490d-99e2-41e5d7f18dbe  47d738ae-e3dc-4496-bc68-46874cf70b51  749a6142-3668-4d6a-a615-a3286f35fb0f  d975198a-4f1a-41af-bf78-d7d3659433c8  f8868e15-06b8-40a7-9e82-c1dd7b4d100c
migrations/: env.py
migrations/versions/: 212e0e60c178_add_items_table.py  5df5e2987093_add_attribute_templates_table.py  644ba6b47222_change_items_size_to_bigint.py  76ffd36326a3_add_time_columns_to_items_table.py  c9d07577d8d2_add_collections_tables.py  cad81b7e09aa_add_other_items_tables.py  e9ee5505b100_add_time_columns_and_modify_constraint_.py
tests/: __init__.py  conftest.py  pytest.ini  test_attribute_templates.py  test_collections.py  test_hello_world.py  test_items.py  test_utils.py
