[tool.poetry]
name = "metadata"
version = "0.1.0"
description = "This service is designed to create and update file metadata."
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.9"
common = "0.0.19"
logger = "0.1.0"
fastapi = "0.62.0"
uvicorn = "0.17.5"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"
coverage = "5.3"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pilot"
url = "https://git.indocresearch.org/api/v4/groups/pilot/-/packages/pypi/simple"
default = true
